# nlp_final

./: .gitignore  ABSA_Project_Proposal.pptx  README.md  pyproject.toml
asc/: ASC_Report.md  asc_evaluate.py  asc_prepare_data.py  asc_train.py  asc_train_deberta.py  asc_train_modal.py
asc/asc_data/test/: state.json  (+1 more)
asc/asc_output/: test_results.json
asc/asc_output_laptop_bert/: test_results.json
asc/asc_output_laptop_deberta/: test_results.json
asc/asc_output_restaurant_bert/: test_results.json
asc/asc_output_restaurant_deberta/: test_results.json
ate/: INFO_7610_Final_Yunzhu.ipynb  ate_evaluate.py  ate_evaluate_deberta.py  ate_predict.py  ate_predictions.json  ate_prepare_data.py  ate_prepare_data_fixed.py  ate_train.py  ate_train_deberta.py  config.json
ate/ate_output_laptop_bert/: test_results.json
ate/ate_output_laptop_deberta/: test_results.json
ate/ate_output_restaurant_bert/: test_results.json
ate/ate_output_restaurant_deberta/: test_results.json
docs/: Yubo wang requirements.md  接口.md
pipeline/: asc_adapter.py  ate_adapter.py  config.py  data_utils.py  error_analysis.py  evaluate.py  plot_figures.py  run_cross_domain.py  run_pipeline.py  semeval_data.py  test_results.py  train_all.py
report/: ABSA_E2E_Experiment_Report.md
slide/: ABSA_Final_Presentation.pptx  generate_pptx.py  generate_pptx_images.py  presentation.html  slide1.html  slide10.html  slide11.html  slide12.html  slide13.html  slide14.html  slide15.html  slide16.html  slide2.html  slide3.html  slide4.html  slide5.html  slide6.html  slide7.html  slide8.html  slide9.html
(+106 files in other folders)
