[project]
name = "nlp-final"
version = "0.1.0"
description = "ATE / ASC coursework (transformers + datasets)"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "torch>=2.0",
    "transformers>=4.36",
    "datasets>=2.16",
    "scikit-learn>=1.3",
    "seqeval>=1.2",
    "accelerate>=0.25",
    "modal>=0.56",
]

[tool.uv]
package = false
