[project]
name = "nlp-final"
version = "0.1.0"
description = "ATE / ASC coursework (transformers + datasets)"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "torch>=2.9",
    "transformers>=4.36",
    "datasets>=2.16",
    "scikit-learn>=1.3",
    "seqeval>=1.2",
    "accelerate>=0.25",
    "modal>=0.56",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
